--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -54,8 +54,12 @@ http {
 		}
 	    
 	    location /xmlrpc {
-	        proxy_pass http://localhost:8080;
-	    }		
+	        proxy_pass http://127.0.0.1:8080;
+	    }
+	    
+	    location /apps/ {
+	        proxy_pass http://127.0.0.1:8080;
+	    }
 	}
 	
 	include /etc/nginx/mime.types;
@@ -73,3 +77,5 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
+
+# pscp -pw +++ -r /home/claudius/workspaces/repositories/git/ilir-ontology/configuration/nginx.conf root@188.212.37.221:/etc/nginx/nginx.conf
